working flask app

--- a/IE3_WebApp/app/templates/webapp.html
+++ b/IE3_WebApp/app/templates/webapp.html
@@ -25,7 +25,7 @@
     <header class="header">
       <div class="container-lrg">
         <div class="flex col-12 spread">
-          <a class="logo primary-color launchaco-builder-hoverable" href="index.html">ie3-ml</a>
+          <a class="logo primary-color launchaco-builder-hoverable" href="/">ie3-ml</a>
           <a href="mailto:kennethgomez2020@u.northwestern.edu" class="nav-link secondary-color mr0 email header-email accent-bg">Contact</a>
         </div>
       </div>
@@ -39,7 +39,7 @@
             </div>
           </div>
         </div>
-      <form>
+      <form method="POST" name="seed">
         <div class="container">
           <div class="row">
             <div class="form-group col-lg-8">
@@ -75,7 +75,7 @@
       <!---->
       </div>
     </section>
-
+<script src = "webapp.js"></script>
 </body>
 
 </html>
