--- a/IE3_WebApp/app/templates/index.html
+++ b/IE3_WebApp/app/templates/index.html
@@ -78,7 +78,7 @@
             <div>
               <b class="bold primary-color">Josh Chen</b>
               <p class="paragraph primary-color mt10">Member</p>
-              <p class="paragraph secondary-color mt20">Insert bio</p>
+              <p class="paragraph secondary-color mt20">I'm a freshman studying computer engineering with previous experience in computer vision and android app backend. My favorite food is Soylent and microwaved deep dish pizza.</p>
             </div>
             <!---->
           </div>
