--- a/IE3_WebApp/app/templates/webapp.html
+++ b/IE3_WebApp/app/templates/webapp.html
@@ -39,26 +39,26 @@
             </div>
           </div>
         </div>
-      <form method="POST" name="seed">
+      <form method="POST">
         <div class="container">
           <div class="row">
             <div class="form-group col-lg-8">
               <label for="seedText">Enter seed text</label>
-              <textarea class="form-control" id="seedText" rows="6"></textarea>
+              <textarea class="form-control" name="seed" id="seedText" rows="6"></textarea>
             </div>
           </div>
           <div class="row">
             <div class="form-group col-lg-4">
               <label for="sequenceLength">Sequence Length</label>
-              <input type="number" class="form-control" id="sequenceLength" placeholder="300">
+              <textarea type="number" name="len" class="form-control" id="sequenceLength"></textarea>
             </div>
             <div class="form-group col-lg-4">
               <label for="selectModel">Select model</label>
-              <select class="form-control" id="selectModel">
-              <option>Baking (Character model)</option>
-              <option>Baking (Word model)</option>
-              <option>Poetry</option>
-              <option>Lord of the Rings</option>
+              <select class="form-control" id="selectModel" name="modelType">
+              <option value="1">Baking (Character model)</option>
+              <option value="2">Baking (Word model)</option>
+              <option value="3">Poetry</option>
+              <option value="4">Lord of the Rings</option>
             </select>
             </div>
           </div>
@@ -75,7 +75,7 @@
       <!---->
       </div>
     </section>
-<script src = "webapp.js"></script>
+
 </body>
 
 </html>
