--- a/IE3_WebApp/app/templates/results.html
+++ b/IE3_WebApp/app/templates/results.html
@@ -42,16 +42,16 @@
           <div class="row">
             <div class="col-6">
               <h2>Source Text</h2>
-              <p class="source_text"></p>
+              <p class="source_text">{{source}}</p>
             </div>
             <div class="col-6">
               <h2>Generated Text</h2>
-              <p class="generated_text"></p>
+              <p class="generated_text">{{generated}}</p>
             </div>
           </div>
           <div class="row">
             <div class="col-2">
-              <button class="button primary-color" style="margin-top: 20px; margin-bottom: 20px; background-color:#4736ca;">Generate Again</button>
+              <button class="button primary-color" type="submit" style="margin-top: 20px; margin-bottom: 20px; background-color:#4736ca;">Generate Again</button>
             </div>
           </div>
         </div>
