updated index with bio's and pictures

--- a/IE3_WebApp/app/templates/index.html
+++ b/IE3_WebApp/app/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Text Generation Using Neural Networks">
     <meta property="og:image" content="">
-    <link rel="shortcut icon" href="ml_favicon.png" />
+    <link rel="shortcut icon" href="https://www.launchaco.com/static/favicon.ico" />
 
 
     <link rel="stylesheet" href="https://www.launchaco.com/static/AllTemplates.min.css">
@@ -32,7 +32,7 @@
             <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Text Generation Using Neural Networks</h1>
             <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable">Generate any form of text from baking recipes to Lord of the Rings.</h2>
             <div class="mt40">
-              <a href="/generate" target="_self" class="button mobile-text-center mt10 launchaco-builder-hoverable primary-color mobile-text-center accent-bg">
+              <a href="webapp.html" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable primary-color mobile-text-center accent-bg">
                 <span> Get Started Now </span>
               </a>
             </div>
@@ -41,157 +41,111 @@
         <!---->
       </section>
     </div>
-    <section id="feature-1" class="section black-white" sitemeta="[object Object]" activepage="Landing">
+    <section id="feature-3" class="section black-white" sitemeta="[object Object]" activepage="Landing">
       <div class="container">
         <div class="col-12 text-center flex flex-column center-horizontal">
           <i class="icon secondary-bg mobile-center-icon launchaco-builder-hoverable">
-            <svg class="svg-fill" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path d="M22.5.133h-21C.672.134 0 .805 0 1.633v16c0 .828.672 1.5 1.5 1.5h11.663c.11 0 .218.037.306.104l4.926 3.691A1 1 0 0 0 20 22.132v-2.999h2.5c.828 0 1.5-.672 1.5-1.5v-16c0-.828-.672-1.499-1.5-1.5zm-15.5 11a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm5 0a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm5 0a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"></path>
+            <svg class="svg-fill" viewBox="0 0 25 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M14.001 16.131l4 3h-7.335l-5.066 3.8a1 1 0 0 1-1.6-.8v-3H1.5a1.5 1.5 0 0 1-1.5-1.5V5.633a1.5 1.5 0 0 1 1.5-1.5H3v9.498a2.502 2.502 0 0 0 2.5 2.5h8.501zM25 1.633v11.998a1.5 1.5 0 0 1-1.5 1.5H21v3a1 1 0 0 1-1.6.8l-5.066-3.8H5.5a1.5 1.5 0 0 1-1.5-1.5V1.633a1.5 1.5 0 0 1 1.5-1.5h18a1.5 1.5 0 0 1 1.5 1.5zm-5 7.998a.5.5 0 0 0-.5-.5h-10a.5.5 0 0 0 0 1h10a.5.5 0 0 0 .5-.5zm0-4a.5.5 0 0 0-.5-.5h-10a.5.5 0 0 0 0 1h10a.5.5 0 0 0 .5-.5z"></path>
             </svg>
           </i>
           <h3 class="heading primary-color launchaco-builder-hoverable">Generate multiple kinds of text</h3>
-          <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Something</p>
+          <p class="paragraph mt20 secondary-color launchaco-builder-hoverable">We trained multiple models to create text that resembles baking recipes, Lord of the Rings text, and poetry. Just give the models a starting point and watch it go!</p>
         </div>
       </div>
       <!---->
     </section>
-    <section id="team-2" class="section black-white" sitemeta="[object Object]" activepage="Landing">
-      <div class="container text-center mb35">
+    <section id="team-1" class="section black-white" sitemeta="[object Object]" activepage="Landing" style="padding-bottom: 0px;">
+      <div class="container text-center mb75">
         <h3 class="heading primary-color launchaco-builder-hoverable">Team</h3>
-        <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Under Jared's leadership, we might make something decent</p>
+        <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Meet the team that made everything happen</p>
       </div>
-      <div class="container-lrg flex wrap text-center">
-        <div class="col-4 flex mt40 launchaco-builder-hoverable">
+      <div class="container-sml flex text-center">
+        <div class="col-12 launchaco-builder-hoverable flex">
           <div class="team-card flex flex-column center-vertical center-horizontal w100">
-            <!---->
+            <div class="user-image mb20" style="background-image: url(&quot;https://cdn.launchaco.com/images/f4ab1ebc-f8a7-4dc1-a1ca-61793eba1cf6.png&quot;);"></div>
             <div>
               <b class="bold primary-color">Jared Fernandez</b>
-              <p class="paragraph primary-color mt10">Project Manager</p>
-              <p class="paragraph secondary-color mt20">He knows everything.</p>
+              <p class="paragraph primary-color mt10">Project Leader</p>
+              <p class="paragraph secondary-color mt20">I am a junior studying Computer Science with emphasis on machine learning and natural language processing and computer vision. Outside of programming I enjoy hiking and going to concerts</p>
             </div>
-            <!---->
+            <div class="mt30">
+              <a target="_blank" href="jaredfernandez2019@u.northwestern.edu" class="socialicons accent-bg email"></a>
+              <a href="https://github.com/JaredFern" target="_blank" class="socialicons accent-bg github"></a>
+            </div>
           </div>
         </div>
-        <div class="col-4 flex mt40 launchaco-builder-hoverable">
+      </div>
+    </section>
+    <section id="team-2" class="section black-white" sitemeta="[object Object]" activepage="Landing" style="padding-top:0px;">
+      <div class="container text-center mb35">
+        <!---->
+        <!---->
+      </div>
+      <div class="container flex wrap text-center">
+        <div class="col-6 mt40 flex launchaco-builder-hoverable">
           <div class="team-card flex flex-column center-vertical center-horizontal w100">
-            <!---->
+            <div class="user-image mb20" style="background-image: url(&quot;https://cdn.launchaco.com/images/e155e9e6-2075-4bee-b18c-8b6a78a7ba25.png&quot;);"></div>
             <div>
               <b class="bold primary-color">Josh Chen</b>
-              <p class="paragraph primary-color mt10">Member</p>
+              <p class="paragraph primary-color mt10"></p>
               <p class="paragraph secondary-color mt20">I'm a freshman studying computer engineering with previous experience in computer vision and android app backend. My favorite food is Soylent and microwaved deep dish pizza.</p>
             </div>
-            <!---->
+            <div class="mt30">
+              <a target="_blank" href="hsuan-mingchen2021@u.northwestern.edu" class="socialicons accent-bg email"></a>
+              <a href="https://github.com/FreshJesh5" target="_blank" class="socialicons accent-bg github"></a>
+            </div>
           </div>
         </div>
-        <div class="col-4 flex mt40 launchaco-builder-hoverable">
+        <div class="col-6 mt40 flex launchaco-builder-hoverable">
           <div class="team-card flex flex-column center-vertical center-horizontal w100">
-            <!---->
+            <div class="user-image mb20" style="background-image: url(&quot;https://cdn.launchaco.com/images/bf4396b4-d663-4a05-a6e0-17bafa7dea19.png&quot;);"></div>
             <div>
               <b class="bold primary-color">Vishal Giridhar</b>
-              <p class="paragraph primary-color mt10">Member</p>
-              <p class="paragraph secondary-color mt20">Insert bio</p>
+              <p class="paragraph primary-color mt10"></p>
+              <p class="paragraph secondary-color mt20">He comes from the non-acting branch of the Coppola family: his father August (brother of Francis) is a comparative literature professor and his mother, Joy, a former dancer.</p>
             </div>
-            <!---->
+            <div class="mt30">
+              <a target="_blank" href="" class="socialicons accent-bg email"></a>
+              <a href="https://github.com/weeshal" target="_blank" class="socialicons accent-bg github"></a>
+            </div>
           </div>
         </div>
-        <div class="col-4 flex mt40 launchaco-builder-hoverable">
+        <div class="col-6 mt40 flex launchaco-builder-hoverable">
           <div class="team-card flex flex-column center-vertical center-horizontal w100">
-            <!---->
+            <div class="user-image mb20" style="background-image: url(&quot;https://cdn.launchaco.com/images/c94d9fed-608b-4124-aa83-6e4744a4da63.png&quot;);"></div>
             <div>
               <b class="bold primary-color">Kenneth Gomez</b>
-              <p class="paragraph primary-color mt10">Member</p>
-              <p class="paragraph secondary-color mt20">Insert bio</p>
+              <p class="paragraph primary-color mt10"></p>
+              <p class="paragraph secondary-color mt20">I'm a sophomore studying computer science with an interest in artificial intelligence. I enjoy playing games with friends.</p>
             </div>
-            <!---->
+            <div class="mt30">
+              <a target="_blank" href="kennethgomez2020@u.northwestern.edu" class="socialicons accent-bg email"></a>
+              <a href="https://github.com/kgomez0110" target="_blank" class="socialicons accent-bg github"></a>
+            </div>
           </div>
         </div>
-        <div class="col-4 flex mt40 launchaco-builder-hoverable">
+        <div class="col-6 mt40 flex launchaco-builder-hoverable">
           <div class="team-card flex flex-column center-vertical center-horizontal w100">
-            <!---->
+            <div class="user-image mb20" style="background-image: url(&quot;https://cdn.launchaco.com/images/2d188c13-dc17-4fff-a596-c797c8701d67.png&quot;);"></div>
             <div>
               <b class="bold primary-color">Connor Moen</b>
-              <p class="paragraph primary-color mt10">Member</p>
-              <p class="paragraph secondary-color mt20">Insert bio</p>
+              <p class="paragraph primary-color mt10"></p>
+              <p class="paragraph secondary-color mt20">Sophomore studying computer science, cognitive science, and sustainability. I love listening to good music and cooking good food.</p>
             </div>
-            <!---->
+            <div class="mt30">
+              <a target="_blank" href="connormoen2020@u.northwestern.edu" class="socialicons accent-bg email"></a>
+              <a href="https://github.com/ConnorDouglasMoen" target="_blank" class="socialicons accent-bg github"></a>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="faq-3" class="section black-white" sitemeta="[object Object]" activepage="Landing">
-     <div class="container text-center">
-       <div class="col-12">
-         <h3 class="heading primary-color launchaco-builder-hoverable">
-           Frequently Asked Questions
-         </h3>
-         <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Questions even we still ask sometimes</p>
-       </div>
-     </div>
-     <div class="container mt40">
-       <div class="col-12">
-         <div class="faq pad20">
-           <input id="faq-dropdown-0" type="checkbox" name="faq" class="faq-input">
-           <label for="faq-dropdown-0" class="faq-label flex spread center-horizontal">
-             <span class="bold primary-color mr20">How does it generate text?</span>
-             <svg width="15px" height="9px" viewBox="0 0 15 9" version="1.1" xmlns="http://www.w3.org/2000/svg" class="noshrink svg-fill">
-               <path d="M7.4176407,5.65342711 L1.76421359,8.8817842e-16 L0.350000024,1.41421356 L6.00342714,7.06764068 L6,7.07106781 L7.41421356,8.48528137 L7.4176407,8.48185424 L7.42106784,8.48528137 L8.8352814,7.07106781 L8.83185426,7.06764068 L14.4852814,1.41421356 L13.0710678,8.8817842e-16 L7.4176407,5.65342711 Z"></path>
-             </svg>
-           </label>
-           <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-             The sky is blue due to something called 'Rayleigh scattering'. Basically, light interacts with the air and scatters. However unlike normal scattering (like you would have with a light in a room), this scattering is proportional to the wavelength of the
-             light. Hence higher frequency light (like blue light) is scattered more strongly, while the other colours tend to follow the path of normal sunlight!
-           </p>
-         </div>
-         <div class="faq pad20">
-           <input id="faq-dropdown-1" type="checkbox" name="faq" class="faq-input">
-           <label for="faq-dropdown-1" class="faq-label flex spread center-horizontal">
-             <span class="bold primary-color mr20">How does the model learn?</span>
-             <svg width="15px" height="9px" viewBox="0 0 15 9" version="1.1" xmlns="http://www.w3.org/2000/svg" class="noshrink svg-fill">
-               <path d="M7.4176407,5.65342711 L1.76421359,8.8817842e-16 L0.350000024,1.41421356 L6.00342714,7.06764068 L6,7.07106781 L7.41421356,8.48528137 L7.4176407,8.48185424 L7.42106784,8.48528137 L8.8352814,7.07106781 L8.83185426,7.06764068 L14.4852814,1.41421356 L13.0710678,8.8817842e-16 L7.4176407,5.65342711 Z"></path>
-             </svg>
-           </label>
-           <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-             The sky is blue due to something called 'Rayleigh scattering'. Basically, light interacts with the air and scatters. However unlike normal scattering (like you would have with a light in a room), this scattering is proportional to the wavelength of the
-             light. Hence higher frequency light (like blue light) is scattered more strongly, while the other colours tend to follow the path of normal sunlight!
-           </p>
-         </div>
-         <div class="faq pad20">
-           <input id="faq-dropdown-2" type="checkbox" name="faq" class="faq-input">
-           <label for="faq-dropdown-2" class="faq-label flex spread center-horizontal">
-             <span class="bold primary-color mr20">Why was the LSTM model the best for this project?</span>
-             <svg width="15px" height="9px" viewBox="0 0 15 9" version="1.1" xmlns="http://www.w3.org/2000/svg" class="noshrink svg-fill">
-               <path d="M7.4176407,5.65342711 L1.76421359,8.8817842e-16 L0.350000024,1.41421356 L6.00342714,7.06764068 L6,7.07106781 L7.41421356,8.48528137 L7.4176407,8.48185424 L7.42106784,8.48528137 L8.8352814,7.07106781 L8.83185426,7.06764068 L14.4852814,1.41421356 L13.0710678,8.8817842e-16 L7.4176407,5.65342711 Z"></path>
-             </svg>
-           </label>
-           <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-             The sky is blue due to something called 'Rayleigh scattering'. Basically, light interacts with the air and scatters. However unlike normal scattering (like you would have with a light in a room), this scattering is proportional to the wavelength of the
-             light. Hence higher frequency light (like blue light) is scattered more strongly, while the other colours tend to follow the path of normal sunlight!
-           </p>
-         </div>
-       </div>
-     </div>
-   </section>
+
 
   </body>
 
-  <script>
-    window.onscroll = function()
-    {
-      showAd()
-    }
 
-    function showAd()
-    {
-      var scrollBarPosition = window.pageYOffset | document.body.scrollTop;
-
-      // At specifiv position do what you want
-      if (scrollBarPosition > 300)
-      {
-        document.getElementById("visual-dreamer").className = "launchaco-promo launchaco-promo__active";
-        window.onscroll = function() {};
-      }
-    }
-  </script>
 
 </html>
