--- a/IE3_WebApp/app/templates/index.html
+++ b/IE3_WebApp/app/templates/index.html
@@ -32,7 +32,7 @@
             <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Text Generation Using Neural Networks</h1>
             <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable">Generate any form of text from baking recipes to Lord of the Rings.</h2>
             <div class="mt40">
-              <a href="webapp.html" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable primary-color mobile-text-center accent-bg">
+              <a href="/generate" target="_blank" class="button mobile-text-center mt10 launchaco-builder-hoverable primary-color mobile-text-center accent-bg">
                 <span> Get Started Now </span>
               </a>
             </div>
